# tiktoken-c

./: .gitignore  Cargo.toml  README.md  cbindgen.toml  renovate.json  tiktoken.h
.github/workflows/: build.yml  release.yml  test.yml
examples/: count_chat_tokens.c  count_tokens.c
src/: alloc.rs  corebpe.rs  lib.rs  utils.rs
test/: run_tests.c  test.c  test.sh  version.c
