[package]
name = "tiktoken-c"
version = "0.2.1"
edition = "2021"
authors = ["kojix2 <2xijok@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
tiktoken-rs = "0.5"
log = "0.4"
simple_logger = "4.3"

[profile.dev]
rpath = true

[profile.release]
lto = true
codegen-units = 1
rpath = true
