[package]
name = "tiktoken-c"
version = "0.3.0"
edition = "2021"
authors = ["kojix2 <2xijok@gmail.com>"]
description = "Unofficial C API binding for tiktoken-rs"
repository = "https://github.com/kojix2/tiktoken-c"
keywords = ["tokenizer", "llm", "openai", "bpe", "ffi"]
categories = ["api-bindings", "text-processing"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
tiktoken-rs = "0.6"
log = "0.4"
simple_logger = "4.3"

[profile.dev]
rpath = true

[profile.release]
lto = true
codegen-units = 1
rpath = true
