[package]
name = "tiktoken-c"
version = "0.5.0"
edition = "2021"
authors = ["kojix2 <2xijok@gmail.com>"]
description = "Unofficial C API binding for tiktoken-rs"
repository = "https://github.com/kojix2/tiktoken-c"
keywords = ["tokenizer", "llm", "openai", "bpe", "ffi"]
categories = ["api-bindings", "text-processing"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[features]  
default = []  
logging = ["log", "simple_logger"]  

[dependencies]
tiktoken-rs = "0.7"
log = { version = "0.4", optional = true }  
simple_logger = { version = "4.3", optional = true }
libc = "0.2"

[profile.dev]
rpath = true

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
rpath = true
